--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "styled-components": "^5.1.0",
     "webpack": "4.42.0"
   },
