--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-responsive-carousel": "^3.2.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
+    "react-scroll-horizontal": "^1.6.4",
     "styled-components": "^5.1.0",
     "webpack": "4.42.0"
   },
